Changes with APR 0.9.8-dev

  *) Keep testpipe.c from hanging on win32. [Garrett Rooney]

  *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
     and how to determine which parts of the resulting apr_finfo_t can be
     used in such a case.
     [Garrett Rooney]

  *) Fix warning when compiling on FreeBSD by correcting the type of
     the final argument passed to sysctlbyname. [Garrett Rooney]

Changes with APR 0.9.7

  *) Fix crash in apr_dir_make_recursive() for relative path
     when the working directory has been deleted.  [Joe Orton]

  *) Win32: fix apr_proc_mutex_trylock() to handle WAIT_TIMEOUT,
     returning APR_EBUSY.  [Ronen Mizrahi <ronen@tversity.com>]

  *) Fix apr_file_read() to catch write failures when flushing pending
     writes for a buffered file.  [Joe Orton]

  *) Fix apr_file_write() infinite loop on write failure for buffered
     files.  [Erik Huelsmann <ehuels gmail.com>]

  *) Fix error handling where apr_uid_* and apr_gid_* could segfault
     or return APR_SUCCESS in failure cases.  PR 34053.  [Joe Orton,
     Paul Querna]

  *) Refactor Win32 condition variables code to address bugs 27654, 34336.
     [Henry Jen <henryjen ztune.net>, E Holyat <eholyat yahoo.com>]

  *) Support APR_SO_SNDBUF and APR_SO_RCVBUF on Windows.  PR 32177.
     [Sim <sgobbi datamanagement.it>, Jeff Trawick]

  *) Fix detection of rwlocks on Mac OS X. [Aaron Bannert]

  *) Fix issue with poll() followed by net I/O yielding EAGAIN on
     Mac OS 10.4 (Darwin 8). [Wilfredo Sanchez]

Changes with APR 0.9.6

  *) Add apr_threadattr_stacksize_set() for overriding the default
     stack size for threads created by apr_thread_create().
     [Jeff Trawick]

  *) Add an RPM spec file. [Graham Leggett]

  *) Add a build script to create a solaris package. [Graham Leggett]

Changes with APR 0.9.5

  *) Prevent unbounded memory use during repeated operations on a hash table.
     [Julian Foad <julianfoad btopenworld.com>
