@@ -2,6 +2,9 @@ Changes with APR 0.9.8-dev
 
   *) Keep testpipe.c from hanging on win32. [Garrett Rooney]
 
+  *) Fix assertion from double close of a handle with a rwlock on win32.
+     [Evgueni Brevnov <evgueni.brevnov gmail.com>]
+
   *) Documented that apr_stat and apr_dir_read can return APR_INCOMPLETE,
      and how to determine which parts of the resulting apr_finfo_t can be
      used in such a case.
